--- a/translation/smithery.yaml
+++ b/translation/smithery.yaml
@@ -9,7 +9,7 @@ startCommand:
     properties:
       jigsawstackApiKey:
         type: string
-        description: The API key for the JigsawStack AI Web Scrape server.
+        description: Your API key from JigsawStack.
   commandFunction:
     # A JS function that produces the CLI command based on the given config to start the MCP on stdio.
     |-
