--- a/translation/package.json
+++ b/translation/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ai-web-search",
+  "name": "ai-translation",
   "version": "0.1.0",
-  "description": "Automate your web search with AI, powered by JigsawStack",
+  "description": "Let AI translate your text, in 180+ language pairs! From JigsawStack.",
   "type": "module",
   "bin": {
     "jigsawstack-mcp-server": "dist/index.js"
